--- a/css/new-age.css
+++ b/css/new-age.css
@@ -6,6 +6,7 @@
 html,
 body {
   width: 100%;
+  background: url("../img/football-stadium-desktop-background.jpg");
   /*height: 100%; */
 }
 
@@ -121,7 +122,7 @@ header.masthead {
   /*padding-top: 150px;*/
   padding-bottom: 100px;
   color: white;
-  background: white;
+  /*background: white;*/
   /*background: -webkit-linear-gradient(to left, #7b4397, #dc2430);
   background: linear-gradient(to left, #7b4397, #dc2430);*/
  }
@@ -338,8 +339,8 @@ footer {
     padding: 0;
     border: 1px solid #888;
     border-radius: 5px;
-    width: 60%;
-    height: 70%;
+    width: 80%;
+    /*height: 70%;*/
     overflow: auto;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
@@ -353,7 +354,11 @@ footer {
 .tablinks{
   font-size: 15px;
   float:  left;
+  padding-right: 3px;
 }
 .tab{
   margin-left: 45%;
+  overflow: hidden;
+  height: 30px;
+  line-height: 30px;
 }
