--- a/css/new-age.css
+++ b/css/new-age.css
@@ -312,7 +312,7 @@ footer {
   font-size: 11px;
   padding: 15px 45px; }
 .content{
-  color: blue;
+  color: black;
 }
 .wrapper_add_edit{
     /*background-color: red;*/
