--- a/ResultGame/css/new-age.css
+++ b/ResultGame/css/new-age.css
@@ -11,7 +11,9 @@ body {
 }
 
 body {
-  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif'; }
+  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif'; 
+  font-size: 14px;
+}
 
 a {
   color: #fdcc52;
