--- a/ResultGame/css/new-age.css
+++ b/ResultGame/css/new-age.css
@@ -119,10 +119,11 @@ section {
             color: #fdcc52; } }
 
 header.masthead {
+    height: 100vh;
   position: relative;
   width: 100%;
   /*padding-top: 150px;*/
-  padding-bottom: 100px;
+  /*padding-bottom: 100px;*/
   color: white;
   /*background: white;*/
   /*background: -webkit-linear-gradient(to left, #7b4397, #dc2430);
